--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="styles/original.css">
+  
+  <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
+  
 </head>
 <body>
 
